service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app:  tomcat-svc
  name:  tomcat-svc
  namespace: tomcat
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app:  tomcat-deployment
